--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "apexcharts": "^3.52.0",
+    "axios": "^1.7.8",
     "dayjs": "^1.11.13",
     "draft-js": "^0.11.7",
     "history": "^5.3.0",
@@ -40,6 +41,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "simplebar-react": "^3.2.6"
